--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -44,7 +44,7 @@
         img{
             width: 150px;
             position: absolute;
-            top: -10%;
+            margin-top: -30px;
             opacity: 0;
             height: auto;
             animation: bounceIn 0.5s linear both;
